--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,6 @@ body {
     box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.4);
 }
 
-@media (max-width: 768px) {
-    #x2 {
-        font-size: 1rem;
-        max-width: 90%;
-    }
-}
 
 
 
@@ -55,3 +49,16 @@ img {
     height: auto;
 }
 
+
+@media (max-width: 768px) {
+    #x2 {
+        font-size: 1rem;
+        max-width: 90%;
+    }
+img {
+    max-width: 30%;
+    height: auto;
+}
+
+
+}
